--- a/templates/accounts/registerotp.html
+++ b/templates/accounts/registerotp.html
@@ -36,7 +36,7 @@
 
                 <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
 
-                <form action="{% url 'register' %}" method = "POST">
+                <form action="{% url 'registerotp' %}" method = "POST">
                   {% csrf_token %}
                   
 
@@ -46,13 +46,12 @@
                       {{ form.username }}
                       
                     </div>
-                  </div>
-                  
-                  
+                  </div>                  
+
                   <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
+                    <i class="fas fa-phone fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      {{ form.email }}
+                      {{ form.phone_number }}
                       
                     </div>
                   </div>
@@ -60,7 +59,7 @@
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-phone fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      {{ form.phone_number }}
+                      {{ form.email }}
                       
                     </div>
                   </div>
@@ -79,12 +78,7 @@
                       {{ form.confirm_password }}
                       
                     </div>
-                  </div>
-                  
-
-                  
-
-                  
+                  </div>                  
 
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
                     <button type="submit" class="btn btn-primary btn-lg">Register</button>
@@ -106,7 +100,7 @@
             </div>
                 
           </div>
-          <div><p class="small fw-bold mt-2 pt-1 mb-0">Register via OTP <a href="{% url 'registerotp' %}"
+          <div><p class="small fw-bold mt-2 pt-1 mb-0">Register via Email <a href="{% url 'register' %}"
             class="link-danger">Register</a></p></div>
         
           <div><p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="{% url 'login' %}"
