--- a/templates/admin/adminusers.html
+++ b/templates/admin/adminusers.html
@@ -1,12 +1,11 @@
 {% extends 'admin/adminbase.html' %}
 {% block content %}
-<div class="col-12">
-    <div class="bg-white rounded h-100 p-4">
+
         
         <div class="table-responsive">
             <table class="table table-bordered align-items-center">
                 <thead>
-                    <tr class="text-dark ">
+                    <tr class="text-white ">
                         
                         <th scope="col">Username</th>
                         
@@ -16,7 +15,7 @@
                         <th scope="col">Action</th>
                     </tr>
                 </thead>
-                <tbody class = "text-dark ">
+                <tbody class = "text-white ">
                     {% for User in Users %}
                     <tr>
                         
