--- a/templates/order/cod.html
+++ b/templates/order/cod.html
@@ -93,7 +93,7 @@
     
     
     
-      <a href="{% url 'confirmorder' %}" class="site-btn text-center">CONFIRM ORDER</a>
+      <a href="{% url 'confirmorder' order_number=order.order_number %}" class="site-btn text-center">CONFIRM ORDER</a>
     
 
     
