--- a/templates/store/store.html
+++ b/templates/store/store.html
@@ -107,6 +107,16 @@
     <a href={{ product.get_url }} class="add-cart">View Details</a>
    
     <h5>${{ product.price }}</h5>
+    <h5>
+        {% if product.discount_price != product.price %}
+    <p class="card-text text-success font-weight-bold">
+        <del>${{ product.price }}</del> ${{ product.discount_price }}
+    </p>
+{% endif %}
+    </h5>
+   
+    
+    
     
     </div>
     </div>
