--- a/static/admin/css/style.css
+++ b/static/admin/css/style.css
@@ -1,6 +1,5 @@
 /********** Template CSS **********/
 :root {
-    --white : #FFF;
     --primary: #EB1616;
     --secondary: #191C24;
     --light: #6C7293;
@@ -72,7 +71,7 @@
     width: 250px;
     height: 100vh;
     overflow-y: auto;
-    background: var(--white);
+    background: var(--secondary);
     transition: 0.5s;
     z-index: 999;
 }
@@ -80,7 +79,7 @@
 .content {
     margin-left: 250px;
     min-height: 100vh;
-    background: #e9ecef;
+    background: var(--dark);
     transition: 0.5s;
 }
 
@@ -124,7 +123,7 @@
     padding: 7px 20px;
     color: var(--light);
     font-weight: 500;
-    border-left: 3px solid var(--white);
+    border-left: 3px solid var(--secondary);
     border-radius: 0 30px 30px 0;
     outline: none;
 }
@@ -132,7 +131,7 @@
 .sidebar .navbar .navbar-nav .nav-link:hover,
 .sidebar .navbar .navbar-nav .nav-link.active {
     color: var(--primary);
-    background: var(--light);
+    background: var(--dark);
     border-color: var(--primary);
 }
 
@@ -142,7 +141,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: var(--light);
+    background: var(--dark);
     border-radius: 40px;
 }
 
@@ -174,7 +173,7 @@
 
 .sidebar .navbar .dropdown-item:hover,
 .sidebar .navbar .dropdown-item.active {
-    background: var(--light);
+    background: var(--dark);
 }
 
 .content .navbar .navbar-nav .nav-link {
@@ -196,7 +195,7 @@
     display: inline-flex;
     align-items: center;
     justify-content: center;
-    background: var(--light);
+    background: var(--dark);
     border-radius: 40px;
 }
 
@@ -206,7 +205,7 @@
 
 .content .navbar .dropdown-item:hover,
 .content .navbar .dropdown-item.active {
-    background: var(--secondary);
+    background: var(--dark);
 }
 
 .content .navbar .dropdown-toggle::after {
@@ -250,7 +249,7 @@
 
 .bootstrap-datetimepicker-widget table td.active,
 .bootstrap-datetimepicker-widget table td.active:hover {
-    background: var(--lighty);
+    background: var(--primary);
 }
 
 .bootstrap-datetimepicker-widget table td.today::before {
@@ -285,6 +284,6 @@
 }
 
 .testimonial-carousel .owl-dot.active {
-    background: var(--light);
+    background: var(--dark);
     border-color: var(--primary);
 }
