--- a/templates/accounts/addaddress.html
+++ b/templates/accounts/addaddress.html
@@ -42,7 +42,7 @@
 						    </div>
 							<div class = "form-group mb-3">
                                 <label>Pincode</label>
-                                <input type = "text" name="Pincode"	placeholder="pincode" class="form-control" required>													
+                                <input type = "text" name="pincode"	placeholder="pincode" class="form-control" required>													
 						    </div>
 							<div class = "form-group mb-3">
                                 <label>Phone</label>
