--- a/templates/accounts/dashboard.html
+++ b/templates/accounts/dashboard.html
@@ -3,7 +3,7 @@
 
 {% block content %}
 
-<section class="section-conten padding-y bg">
+<section class="section-content padding-y bg">
 
 {% include 'includes/message.html' %}
 <div class="container">
@@ -17,27 +17,32 @@
 		</header>
 		<div class="card-body">
 			<div class="row">
-			<div class="col-md-6">
+			<div class="col-md-12">
 				
 					<div class="card"style="text-align:center;">						
 					     <div class="card-body">
 							<h5 class="card-title">Total orders</h5>
 							<h4>{{order_count}}</h4>
 							
+							
+							
+
+							
+							
 						 </div>
 					</div>
+					<div class="card"style="text-align:center;">						
+						<div class="card-body">
+						   <img src="http://www.w3schools.com/howto/img_avatar.png" alt="User Profile Picture"width="50"height="50"style="border-radius:50%;">
+						   <p class="mb-0">{{ user.email }}</p>
+						   <p>{{ user.phone_number }}</p>
+						   <p>Name :{{ profile.first_name }} {{ profile.last_name }}</p>			   
+						</div>
+					   </div>
 				
 			</div> 
 		
-		<div class="col-md-6">
-			<div class="card"style="text-align:center;">						
-				 <div class="card-body">
-					<img src="http://www.w3schools.com/howto/img_avatar.png" alt="User Profile Picture"width="50"height="50"style="border-radius:50%;">
-					<p class="mb-0">{{ user.email }}</p>
-					<p>{{ user.phone_number }}</p>
-				 </div>
-				</div>
-			</div>
+		
 			</div>
 		</div>		 
 		</article> 
