--- a/templates/accounts/invoice.html
+++ b/templates/accounts/invoice.html
@@ -4,8 +4,8 @@
 {% block content %}
 
 <div class="container" style="margin-top: 50px;">
-    <center><i class="fas fa-check-circle" style="font-size: 72px;margin-bottom: 20px;color: #28A745;"></i></center>
-    <h2 class="text-center">Payment Successful</h2>
+  
+    <h2 class="text-center">Invoice</h2>
 	<br>
 	<div class="text-center">
 		<a href="{% url 'store' %}" class="btn btn-success">Shop more</a>
@@ -29,28 +29,13 @@
                         <div class="col-lg-6">
                             <!-- col-lg-6 start here -->
                             <div class="invoice-from">
-                                <ul class="list-unstyled text-right">
-                                    <li><strong>Invoiced To</strong></li>
-                                    <li>{{order.full_name}}</li>
-                                    <li>{{order.full_address}}</li>
-                                    <li>{{order.city}}, {{order.state}}</li>
-                                    <li>{{order.country}}</li>
-                                </ul>
+                                
                             </div>
                         </div>
                         <!-- col-lg-6 end here -->
                         <div class="col-lg-12">
                             <!-- col-lg-12 start here -->
-                            <div class="invoice-details mt25">
-                                <div class="well">
-                                    <ul class="list-unstyled mb0">
-                                        <li><strong>Order</strong> #{{order_number}}</li>
-                                        <li><strong>Transaction ID</strong> {{transID}}</li>
-                                        <li><strong>Order Date:</strong> {{order.created_at}}</li>
-                                        
-                                    </ul>
-                                </div>
-                            </div>
+                            
 
                             <div class="invoice-items">
                                 <div class="table-responsive" style="overflow: hidden; outline: none;" tabindex="0">
@@ -75,7 +60,7 @@
                                           				</p>
                                                 </td>
                                                 <td class="text-center">{{item.quantity}}</td>
-                                                <td class="text-center">${{item.product_price}} USD</td>
+                                                <td class="text-center">${{item.product.discount_price|floatformat:2}} USD</td>
                                             </tr>
                                           {% endfor %}
                                         </tbody>
@@ -86,12 +71,12 @@
                                             </tr>
                                             <tr>
                                                 <th colspan="2" class="text-right">Tax:</th>
-                                                <th class="text-center">${{order.tax}}</th>
+                                                <th class="text-center">${{order.tax|floatformat:2}}</th>
                                             </tr>
 
                                             <tr>
                                                 <th colspan="2" class="text-right">Grand Total:</th>
-                                                <th class="text-center">${{order.order_total}}</th>
+                                                <th class="text-center">${{order.order_total|floatformat:2}}</th>
                                             </tr>
                                         </tfoot>
                                     </table>
