--- a/templates/accounts/order_details.html
+++ b/templates/accounts/order_details.html
@@ -24,7 +24,7 @@
                         
                         <th scope="col">Order Id</th>
                         
-                        <th scope="col">Transaction Id</th>
+                        
                         <th scope="col">Order Date</th>
                         <th scope="col">Status</th>
                         <th scope="col">Action</th>
@@ -35,16 +35,20 @@
                     {% for Order in Orders %}
                     <tr>
                         <td>{{Order.order_number}}</td>
-                        <td>khgkhj</td>
+                        
 						<td>{{Order.created_at}}</td> 
 						<td>{{Order.status}}</td>
 						<td>
+							{% if Order.status == 'Delivered' %}
+							<a href = "{% url 'returnorder' Order.id %}"><button class="btn btn-warning m-2 " type="button">Return</button></a>
+							{% else %}
 							<a href = "{% url 'cancelorderuser' Order.id %}"><button class="btn btn-danger m-2" type="button">Cancel</button></a>
-							<a href = "#"><button class="btn btn-warning m-2 " type="button">Return</button></a>
+							{% endif %}
+							
 							
 						</td>  
 						<td>
-							<a href = "#"><button class="btn btn-info m-2 " type="button">Invoice</button></a>
+							<a href = "{% url 'printinvoice' Order.id %}"><button class="btn btn-info m-2 " type="button">Invoice</button></a>
 						</td>                          
                     </tr> 
 					{% endfor %}                   
