--- a/templates/accounts/verifyotp.html
+++ b/templates/accounts/verifyotp.html
@@ -34,60 +34,22 @@
               <div class="col-md-10 col-lg-6 col-xl-5 order-2 order-lg-1">
                 {% include 'includes/message.html' %}
 
-                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Sign up</p>
+                <p class="text-center h1 fw-bold mb-5 mx-1 mx-md-4 mt-4">Enter the OTP</p>
 
-                <form action="{% url 'register' %}" method = "POST">
+                <form action="{% url 'otpverify' %}" method = "POST">
                   {% csrf_token %}
                   
 
                   <div class="d-flex flex-row align-items-center mb-4">
                     <i class="fas fa-user fa-lg me-3 fa-fw"></i>
                     <div class="form-outline flex-fill mb-0">
-                      {{ form.username }}
+                      {{ form.code }}
                       
                     </div>
                   </div>
-                  
-                  
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-envelope fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      {{ form.email }}
-                      
-                    </div>
-                  </div>
-
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-phone fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      {{ form.phone_number }}
-                      
-                    </div>
-                  </div>
-
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      {{ form.password }}
-                      
-                    </div>
-                  </div>
-                  
-                  <div class="d-flex flex-row align-items-center mb-4">
-                    <i class="fas fa-key fa-lg me-3 fa-fw"></i>
-                    <div class="form-outline flex-fill mb-0">
-                      {{ form.confirm_password }}
-                      
-                    </div>
-                  </div>
-                  
-
-                  
-
-                  
-
+    
                   <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                    <button type="submit" class="btn btn-primary btn-lg">Register</button>
+                    <button type="submit" class="btn btn-primary btn-lg">Confirm</button>
                   </div>
                   
                   {{ form.email.errors }}
@@ -106,12 +68,9 @@
             </div>
                 
           </div>
-          <div><p class="small fw-bold mt-2 pt-1 mb-0">Register via OTP <a href="{% url 'registerotp' %}"
-            class="link-danger">Register</a></p></div>
+          
         
-          <div><p class="small fw-bold mt-2 pt-1 mb-0">Already have an account? <a href="{% url 'login' %}"
-            class="link-danger">login</a></p></div>
-        </div>
+          
       </div>
         
       </div>
