--- a/templates/admin/adminbase.html
+++ b/templates/admin/adminbase.html
@@ -4,7 +4,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>Male Fashion - Admin Panel</title>
+    <title>Malefashion - Admin Panel</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="" name="keywords">
     <meta content="" name="description">
@@ -28,15 +28,22 @@
     <!-- Customized Bootstrap Stylesheet -->
     <link href="{% static 'admin/css/bootstrap.min.css' %}" rel="stylesheet">
 
+
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/cropperjs@1.5.12/dist/cropper.min.css">
+    <script src="https://cdn.jsdelivr.net/npm/cropperjs@1.5.12/dist/cropper.min.js"></script>
+    
+
     <!-- Template Stylesheet -->
     <link href="{% static 'admin/css/style.css' %}" rel="stylesheet">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
 </head>
 
 <body>
-    <div class="container-fluid position-relative d-flex p-0 ">
+    <div class="container-fluid position-relative d-flex p-0">
         <!-- Spinner Start -->
-        <div id="spinner" class="show bg-light position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
+        <div id="spinner" class="show bg-dark position-fixed translate-middle w-100 vh-100 top-50 start-50 d-flex align-items-center justify-content-center">
             <div class="spinner-border text-primary" style="width: 3rem; height: 3rem;" role="status">
                 <span class="sr-only">Loading...</span>
             </div>
@@ -46,22 +53,30 @@
 
         <!-- Sidebar Start -->
         <div class="sidebar pe-4 pb-3">
-            <nav class="navbar bg-white navbar-light mt-3">
-                <a href="index.html"><img src="{% static 'img/logo.png' %}" alt="" class="navbar-brand mx-4 mb-3"></a>
-                    
-                
+            <nav class="navbar bg-secondary navbar-dark">
+                <div class="m-4">
+                <a href="index-2.html"><img src="{% static 'img/logo.png' %}" alt=""></a>
+                </div>
                 <div class="d-flex align-items-center ms-4 mb-4">
                     <div class="position-relative">
-                        
-                        
+                        <img class="rounded-circle" src="{% static 'admin/img/user.jpg' %}" alt="" style="width: 40px; height: 40px;">
+                        <div class="bg-success rounded-circle border border-2 border-white position-absolute end-0 bottom-0 p-1"></div>
                     </div>
-                    
                     <div class="ms-3">
                         <h6 class="mb-0">{{user.username}}</h6>
-                        
+                        <span>Admin</span>
                     </div>
                 </div>
-                {% include 'includes/admindashside.html'%}
+                <div class="navbar-nav w-100">
+                    <a class="nav-item nav-link {% if request.path == '/adminpart/adminpanel/' %}active{% endif %}" href="{% url 'adminpanel' %}">Dashboard</a>
+                    <a class="nav-item nav-link {% if request.path == '/adminpart/admincategory/' %}active{% endif %}" href="{% url 'admincategory' %}">Categories</a>    
+                    <a class="nav-item nav-link {% if request.path == '/adminpart/adminproducts/' %}active{% endif %}" href="{% url 'adminproducts' %}">Products</a>
+                    <a class="nav-item nav-link {% if request.path == '/adminpart/adminusers/' %}active{% endif %}" href="{% url 'adminusers' %}">Users</a>
+                    <a class="nav-item nav-link {% if request.path == '/adminpart/adminorders/' %}active{% endif %}" href="{% url 'adminorders' %}">Orders</a>
+                    <a class="nav-item nav-link {% if request.path == '/adminpart/coupon/' %}active{% endif %}" href="{% url 'coupon' %}">Coupons</a>
+                    <a class="nav-item nav-link {% if request.path == '/adminpart/adminreport/' %}active{% endif %}" href="{% url 'adminreport' %}">Report</a>
+                    <a class="nav-item nav-link {% if request.path == '/adminpart/adminoffers/' %}active{% endif %}" href="{% url 'adminoffers' %}">Offers</a>
+                  </div>
             </nav>
         </div>
         <!-- Sidebar End -->
@@ -70,18 +85,17 @@
         <!-- Content Start -->
         <div class="content">
             <!-- Navbar Start -->
-            <nav class="navbar navbar-expand bg-white navbar-secondary sticky-top px-4 py-0">
+            <nav class="navbar navbar-expand bg-secondary navbar-dark sticky-top px-4 py-0">
                 <a href="index.html" class="navbar-brand d-flex d-lg-none me-4">
                     <h2 class="text-primary mb-0"><i class="fa fa-user-edit"></i></h2>
                 </a>
-                
-                
+                <a href="#" class="sidebar-toggler flex-shrink-0">
+                    <i class="fa fa-bars"></i>
+                </a>
                 <div class="navbar-nav align-items-center ms-auto">
-                    
-                   
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">
-                            
+                            <img class="rounded-circle me-lg-2" src="{% static 'admin/img/user.jpg' %}" alt="" style="width: 40px; height: 40px;">
                             <span class="d-none d-lg-inline-flex">{{user.username}}</span>
                         </a>
                         <div class="dropdown-menu dropdown-menu-end bg-secondary border-0 rounded-0 rounded-bottom m-0">
@@ -91,48 +105,55 @@
                     </div>
                 </div>
             </nav>
-{% block content %}
+            <!-- Navbar End -->
 
-{% endblock %}
-{% comment %} <div class="container-fluid pt-4 px-4">
-    <div class="bg-secondary rounded-top p-4">
-        <div class="row">
-            <div class="col-12 col-sm-6 text-center text-sm-start">
-                &copy; <a href="#">Your Site Name</a>, All Right Reserved. 
+
+            <!-- Sale & Revenue Start -->
+            <div class="container-fluid pt-4 px-4">
+                <div class="row g-4">
+                    {% block content %}
+
+                    {% endblock %}
+                     
+                </div>
             </div>
-            <div class="col-12 col-sm-6 text-center text-sm-end">
-                <!--/*** This template is free as long as you keep the footer author’s credit link/attribution link/backlink. If you'd like to use the template without the footer author’s credit link/attribution link/backlink, you can purchase the Credit Removal License from "https://htmlcodex.com/credit-removal". Thank you for your support. ***/-->
-                Designed By <a href="https://htmlcodex.com">HTML Codex</a>
-                <br>Distributed By: <a href="https://themewagon.com" target="_blank">ThemeWagon</a>
-            </div>
+
+
+            <!-- Footer Start -->
+            
+            <!-- Footer End -->
         </div>
+        <!-- Content End -->
+
+
+        <!-- Back to Top -->
+        <a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
     </div>
-</div> {% endcomment %}
-<!-- Footer End -->
-</div>
-<!-- Content End -->
 
+    <!-- JavaScript Libraries -->
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="{% static 'admin/lib/chart/chart.min.js' %}"></script>
+    <script src="{% static 'admin/lib/easing/easing.min.js' %}"></script>
+    <script src="{% static 'admin/lib/waypoints/waypoints.min.js' %}"></script>
+    <script src="{% static 'admin/lib/owlcarousel/owl.carousel.min.js' %}"></script>
+    <script src="{% static 'admin/lib/tempusdominus/js/moment.min.js' %}"></script>
+    <script src="{% static 'admin/lib/tempusdominus/js/moment-timezone.min.js' %}"></script>
+    <script src="{% static 'admin/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js' %}"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
+    
+    
+    <!-- Template Javascript -->
+    <script src="{% static 'admin/js/main.js' %}"></script>
+    <style>
+        .form-control {
+            border: 1px solid white;
+          }
+    </style>
 
-<!-- Back to Top -->
-<a href="#" class="btn btn-lg btn-primary btn-lg-square back-to-top"><i class="bi bi-arrow-up"></i></a>
-</div>
+    {% block script %}
 
-<!-- JavaScript Libraries -->
-<!-- JavaScript Libraries -->
-<script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.bundle.min.js"></script>
-<script src="{% static 'admin/lib/chart/chart.min.js' %}"></script>
-<script src="{% static 'admin/lib/easing/easing.min.js' %}"></script>
-<script src="{% static 'admin/lib/waypoints/waypoints.min.js' %}"></script>
-<script src="{% static 'admin/lib/owlcarousel/owl.carousel.min.js' %}"></script>
-<script src="{% static 'admin/lib/tempusdominus/js/moment.min.js' %}"></script>
-<script src="{% static 'admin/lib/tempusdominus/js/moment-timezone.min.js' %}"></script>
-<script src="{% static 'admin/lib/tempusdominus/js/tempusdominus-bootstrap-4.min.js' %}"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.5.0/Chart.min.js"></script>
-<!-- Template Javascript -->
-<script src="{% static 'admin/js/main.js' %}"></script>
-
-
+    {% endblock %}
 </body>
 
 </html>
