--- a/templates/admin/adminpanel.html
+++ b/templates/admin/adminpanel.html
@@ -1,5 +1,75 @@
 {% extends 'admin/adminbase.html' %}
 {% block content %}
+<div class="container-fluid pt-4 px-4">
+    <div class="row g-4">
 
+        <div class="col-sm-12 col-xl-6">
+            <div class="bg-secondary rounded h-100 p-4">
+                <h6 class="mb-4">Weekly Report</h6>
+                <canvas id="bar-chart"></canvas>
+            </div>
+            
+            
+        </div>
+    
+
+        <div class="col-sm-12 col-xl-6">
+            <div class="bg-secondary rounded h-100 p-4">
+                <h6 class="mb-4">Stock and quantities</h6>
+                <canvas id="pie-chart"></canvas>
+            </div>
+            
+            
+        </div>
+    </div>
+</div>
+
+
+{% endblock %}
+
+{% block script %}
+<script>
+    var ctx4 = $("#bar-chart").get(0).getContext("2d");
+    var myChart4 = new Chart(ctx4, {
+        type: "bar",
+        data: {
+            labels: [{% for date in dates %} {{ date|date:"d" }}, {% endfor %}],
+            datasets: [{
+                
+                label:'Total Sales per day',
+                data: [{% for sale in sales %} {{ sale }}, {% endfor %}],
+                backgroundColor: "rgba(235, 22, 22, .7)"
+            }]
+        },
+        options: {
+            responsive: true
+        }
+    });
+</script>
+<script>
+    var ctx5 = $("#pie-chart").get(0).getContext("2d");
+    var myChart5 = new Chart(ctx5, {
+        type: "pie",
+        data: {
+            labels: [{% for Product in Products %} '{{ Product.product_name }}', {% endfor %}],
+            datasets: [{
+                label:'Total Products',
+                backgroundColor: [
+                    "rgba(235, 22, 22, .7)",
+                    "rgba(235, 22, 22, .6)",
+                    "rgba(235, 22, 22, .5)",
+                    "rgba(235, 22, 22, .4)",
+                    "rgba(235, 22, 22, .3)",
+                    "rgba(235, 22, 22, .2)",
+                    "rgba(235, 22, 22, .1)"
+                ],
+                data: [{% for Product in Products %} {{ Product.stock }}, {% endfor %}],
+            }]
+        },
+        options: {
+            responsive: true
+        }
+    });
+</script>
 {% endblock %}
 
