--- a/templates/admin/vieworders.html
+++ b/templates/admin/vieworders.html
@@ -1,1 +1,47 @@
-<h1>hh</h1>
+{% extends 'admin/adminbase.html' %}
+{% block content %}
+
+        
+        <div class="table-responsive">
+            <table class="table">
+                <thead>
+
+                    <tr>
+                        <th class="per25 text-center">Picture</th>
+                        <th class="per70 text-center">Products</th>
+                        <th class="per5 text-center">Qty</th>
+                        <th class="per25 text-center">Total</th>
+                        
+                        
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for item in ordered_products %}
+
+                        <tr>
+                            <td><img class="rounded-circle" src={{ item.product.image.url }} alt="" style="width: 65px; height: 65px;">
+                            
+                            </td>
+                            <td>{{item.product.product_name}}
+                                <p class="text-muted small">
+                                        {% if item.variations.all %}
+                                            {% for i in item.variations.all %}
+                                                {{ i.variation_category | capfirst }} : {{ i.variation_value | capfirst }} <br>
+                                            {% endfor %}
+                                        {% endif %}
+                                    </p>
+                            </td>
+                            <td class="text-center">{{item.quantity}}</td>
+                            <td class="text-center">${{item.product_price}} USD</td>
+                        </tr>
+                        
+                    {% endfor %}
+                </tbody>
+            </table>
+            
+        </div>
+    </div>
+</div>
+</div>
+</div>
+{% endblock %}
