--- a/templates/contact.html
+++ b/templates/contact.html
@@ -16,13 +16,10 @@
     strict attention.</p>
     </div>
     <ul>
+    
     <li>
-    <h4>America</h4>
-    <p>195 E Parker Square Dr, Parker, CO 801 <br />+43 982-314-0958</p>
-    </li>
-    <li>
-    <h4>France</h4>
-    <p>109 Avenue Léon, 63 Clermont-Ferrand <br />+12 345-423-9893</p>
+    <h4>India</h4>
+    <p>Kerala,Near kundannoor bridge,Maradu <br />+12 345-423-9893</p>
     </li>
     </ul>
     </div>
