--- a/templates/store/checkout.html
+++ b/templates/store/checkout.html
@@ -8,8 +8,8 @@
     <div class="breadcrumb__text">
     <h4>Check Out</h4>
     <div class="breadcrumb__links">
-    <a href="index-2.html">Home</a>
-    <a href="shop.html">Shop</a>
+    <a href="{% url 'Homepage'%}">Home</a>
+    <a href="{% url 'store' %}">Shop</a>
     <span>Check Out</span>
     </div>
     </div>
@@ -21,16 +21,16 @@
         {% for Address in Addresses %}
         <div class = col-sm-4>
         <div class="card">
-          <input class="form-check-input" type="radio" name="address" id="address{{ Address.id }}" value="{{ Address.id }}">
+          <input class="form-check-input" type="radio" name="address" onclick="selectaddress({{ Address.id }})" value="{{ Address.id }}">
             <div class="card-body">
               <div class="address-row">
                 
                 <div class="address-info">
                   
-                  <p class="card-text">{{Address.address_line_1}}</p>
-                  <p class="card-text">{{Address.address_line_2}}</p>
-                  <p class="card-text">{{Address.city}}, {{Address.state}}</p>
-                  <p class="card-text">{{Address.Pincode}}, {{Address.phone}}</p>
+                  <span class="card-text">{{Address.address_line_1}}</span>
+                  <span class="card-text">{{Address.address_line_2}}</span>
+                  <span class="card-text">{{Address.city}}, {{Address.state}}</span>
+                  <span class="card-text">{{Address.Pincode}}, {{Address.phone}}</span>
                 </div>
               </div>
             </div>
@@ -52,47 +52,34 @@
     <form action ="{% url 'placeorder'%}" method = "POST">
         {% csrf_token %}
     <div class="row mt-5" >
-    <div class="col-lg-6">
-    <div class="checkout__input">
-    <label for = "">First Name</label>
-    <input type="text" name = "first_name" class = "form-control" required>
-    </div>
-    </div>
-    <div class="col-lg-6">
-    <div class="checkout__input">
-    <label for = "">Last Name</label>
-    <input type="text" name = "last_name" class = "form-control" required>
-    </div>
-    </div>
+    
+    
     </div>
     <div class="checkout__input">
     <label for = "">Address line 1</label>
-    <input type="text" name = "address_line_1" class = "form-control" required>
+    <input type="text" id = "address_line_1" name = "address_line_1" class = "form-control" required>
     </div>
     <div class="checkout__input">
     <label for = "">Address line 2</label>
-    <input type="text" name = "address_line_2" class = "form-control" required>
+    <input type="text" id = "address_line_2" name = "address_line_2" class = "form-control" required>
     </div>
     <div class="checkout__input">
     <label for = "">City</label>
-    <input type="text" name = "city" class = "form-control" required>
+    <input type="text" id = "city" name = "city" class = "form-control" required>
     </div>
     <div class="checkout__input">
     <label for = "">State</label>
-    <input type="text" name = "state" class = "form-control" required>
+    <input type="text" id = "state" name = "state" class = "form-control" required>
     </div>
     <div class="checkout__input">
     <label for = "">Pincode</label>
-    <input type="text" name = "pincode" class = "form-control" required>
+    <input type="text" id = "pincode" name = "pincode" class = "form-control" maxlength="6" required>
     </div>
-    <div class="checkout__input">
-    <label for = "">Email</label>
-    <input type="email" name = "email" class = "form-control" required>
-    </div>    
+       
     <div class="col-lg-6">
     <div class="checkout__input">
     <label for = "">Phone</label>
-    <input type="text" name = "Phone" class = "form-control" required>    
+    <input type="text" id = "phone" name = "Phone" class = "form-control" maxlength="10" required>    
     </div>    
     </div>       
     </div>
@@ -102,13 +89,13 @@
     <div class="checkout__order__products d-flex justify-content-between">  <div>Product</div>  <div>Quantity</div> <div>Total</div></div>
     {% for cart_item in cart_items %}
     <ul class="checkout__total__products">
-    <li><img src = "{{ cart_item.product.image.url}}" class = "w-25 float-start" style="margin-right:5rem">{{cart_item.quantity}} <span>${{cart_item.product.price}}</span></li>
+    <li><img src = "{{ cart_item.product.image.url}}" class = "w-25 float-start" style="margin-right:5rem">{{cart_item.quantity}} {% if product.discount_price %}<span>${{cart_item.product.discount_price}}</span>{% else %}<span>${{cart_item.product_price}}</span>{% endif %}</li>
     {% endfor %} 
     </ul>
     <ul class="checkout__total__all">
         <li>Total <span>${{total}}</span></li>
     <li>Tax <span>${{tax}}</span></li>
-    <li><b>Grand Total <span>${{grand_total}}</span></b></li>
+    <li><b>Grand Total <span id="grand_total">$ {{ grand_total }}</b></span></li>
     </ul>
     <div class="checkout__input__checkbox">
            
@@ -147,5 +134,66 @@
               $('form').attr('action', '{% url "paypal" %}');
           }
       });
+    </script>
+      <script>
+        function getCookie(name) {
+          let cookieValue = null;
+          if (document.cookie && document.cookie !== '') {
+              const cookies = document.cookie.split(';');
+              for (let i = 0; i<cookies.length; i++) {
+                  const cookie = cookies[i].trim();
+                  // Does this cookie string begin with the name we want?
+                  if (cookie.substring(0,name.length + 1) === (name + '=')) {
+                      cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+                      break;
+                  }
+              }
+          }
+          return cookieValue;
+      }
+      function selectaddress(id){
+          let address_line_1 = document.getElementById("address_line_1")
+          let address_line_2 = document.getElementById("address_line_2")
+          let city = document.getElementById("city")
+          let state = document.getElementById("state")
+          let pincode = document.getElementById("pincode")
+          
+          let phone = document.getElementById("phone")
+
+          var csrftoken = getCookie('csrftoken')
+          var url = "{% url 'selectaddress' %}"
+                          
+          fetch(url, {
+            method:"POST",
+            headers:{
+              "Content-Type":"application/json",
+              "X-CSRFToken":csrftoken,
+            },
+            body:JSON.stringify({
+              id:id,
+            }),
+          })
+          .then(response => response.json())
+          .then((res)=>{
+            console.log(res)
+            if(res){
+              
+              address_line_1.value=res.address_line_1,
+              address_line_2.value=res.address_line_2,
+              city.value = res.city,
+              state.value = res.state,
+              pincode.value = res.pincode,
+              phone.value = res.phone
+              
+          }
+          
+          })
+          
+        }
+      
+  
+  
+  
+      
   </script>
 {% endblock %}
